Fixes #3246 - Knowldge Base internal answer view goes out of screen if previous or next answer title is very long

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -11525,6 +11525,7 @@ span.is-disabled {
   }
 
   &-main {
+    width: 100%;
     @include ltr(transition, margin-right 500ms);
     @include ltr(margin-right, 280px);
     @include rtl(transition, margin-left 500ms);
